# py

./: .gitlab-ci.yml  CONTRIBUTING.md  README.md  SETUP.md  TODO.md  autofix  check.sh  check.sh.save  curtask  dep  push.sh  pushtask  pyproject.toml  pyrefly.toml  start.sh  testenv.docker
.qwen/: settings.json  settings.json.orig
01.1.PythonTools/lecture/: PythonTools.ipynb  git_onboarding.ipynb  manytask_onboarding_screenshots.html
01.2.BasicTypes/lecture/: BasicTypes.ipynb  Intro.ipynb  test.ipynb
02.1.DataStructures/lecture/: DataStructures.ipynb
03.1.FunctionsStringsIO/lecture/: FunctionsStringsIO.ipynb
03.2.NumpyAndPandas/lecture/: NumpyAndPandas2025.ipynb
04.1.NamespacesAndDecorators/lecture/: custom_telegram_api.py  (+1 more)
06.1.ModulesPackagesImport/tasks/basic_module/: .task.yml  setup.cfg
06.1.ModulesPackagesImport/tasks/basic_module/simple_pass_manager/: __init__.py  manager.py
06.1.ModulesPackagesImport/tasks/basic_module/simple_pass_manager/utils/: __init__.py  encryption.py  generation.py
06.1.ModulesPackagesImport/tasks/steganography_tool/: .task.yml  pyproject.toml
06.1.ModulesPackagesImport/tasks/steganography_tool/steganography_tool/: __init__.py  cli.py  decode.py  encode.py  utils.py
08.1.Typing_2/: typy_1_dummy.py  typy_2_homo.py  typy_3_hetero.py  typy_4_in.py  typy_5_call.py  typy_generic.py  typy_protocol.py
09.1.MapReduceAndStreaming/: operations.py
09.2.WebHttpAPI/: client.py  server.py
12.1.Asynchrony/: sync_vs_async.py
13.1.DatabaseConnectivity/: simple_selects.py
lectures/: patch_metadata_rise.py  template.ipynb
(+110 files in other folders)
