[metadata]
name = simple_pass_manager
version = 0.0.1
author = iver88
author_email = iver88@example.com
description = A small package with simple password manager
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    cryptography
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*
