[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steganography_tool"
version = "0.0.1"
description = "Simple steganography tool"
authors = [
    {name = "iver88", email = "iver88@example.com"},
]
requires-python = ">=3.9"
dependencies = [
    "Pillow",
    "click",
    "numpy",
]

[project.scripts]
steganography-tool = "steganography_tool.cli:main"

[tool.setuptools.package-data]
steganography_tool = ["data/lenna.png"]
